service/doggly/dev/doggly-nestjs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doggly-nestjs
  namespace: doggly-dev
  labels:
    env: dev
    name: doggly-nestjs
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      env: dev
      name: doggly-nestjs
  template:
    metadata:
      labels:
        env: dev
        name: doggly-nestjs
    spec:
      containers:
        - name: doggly-nestjs
          image: 193362923626.dkr.ecr.ap-northeast-2.amazonaws.com/doggly-nestjs:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "150Mi"
            limits:
              memory: "250Mi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: doggly-nestjs
  namespace: doggly-dev
  labels:
    env: dev
    name: doggly-nestjs
spec:
  type: ClusterIP
  selector:
    env: dev
    name: doggly-nestjs
  ports:
    - port: 80
      targetPort: 3000
